- complete change of the menu definition to be more object oriented. - templating the size of the collection - templating the menuitem updater

--- a/exemples/Makefile
+++ b/exemples/Makefile
@@ -9,6 +9,9 @@ all: exemple
 $(EXEC): ./*.cpp
 	$(CC) -o ./$(EXEC) ./*.cpp $(IFLAGS) $(CXXFLAGS)
 
+run: $(EXEC)
+	$(EXEC).exe
+
 all: $(EXEC)
 
 clean: 
